ObexFTP recent NEWS
===================

* be sure to give ObexFS a spin!

* object caching and directory parsing (for things like ObexFS)


* Nokia support via IrDA and Bluetooth

* Siemens S65 support

* Everything but data goes to stderr for more simple redirection.

* VMO converter (gsm and wav) split into seperate package.

* Ericsson and Siemens cable support unified (still testing).