@@ -20,3 +20,5 @@ Bruce Simpson <bms@spc.org> - FreeBSD portability fixes
 
 David Haslam <dhaslam@ntlworld.com> - Sony-Ericsson fixes
 
+Philip Kovacs <kovacsp3@comcast.net> - connection id support
+
