@@ -42,12 +42,12 @@ extern "C" {
 #define APPARAM_INFO_CODE '2'
 
 
-/*@null@*/ obex_object_t *obexftp_build_info (obex_t obex, uint8_t opcode);
-/*@null@*/ obex_object_t *obexftp_build_get (obex_t obex, const char *name, const char *type);
-/*@null@*/ obex_object_t *obexftp_build_rename (obex_t obex, const char *from, const char *to);
-/*@null@*/ obex_object_t *obexftp_build_del (obex_t obex, const char *name);
-/*@null@*/ obex_object_t *obexftp_build_setpath (obex_t obex, const char *name, int create);
-/*@null@*/ obex_object_t *obexftp_build_put (obex_t obex, const char *name, int size);
+/*@null@*/ obex_object_t *obexftp_build_info (obex_t obex, uint32_t conn, uint8_t opcode);
+/*@null@*/ obex_object_t *obexftp_build_get (obex_t obex, uint32_t conn, const char *name, const char *type);
+/*@null@*/ obex_object_t *obexftp_build_rename (obex_t obex, uint32_t conn, const char *from, const char *to);
+/*@null@*/ obex_object_t *obexftp_build_del (obex_t obex, uint32_t conn, const char *name);
+/*@null@*/ obex_object_t *obexftp_build_setpath (obex_t obex, uint32_t conn, const char *name, int create);
+/*@null@*/ obex_object_t *obexftp_build_put (obex_t obex, uint32_t conn, const char *name, int size);
 
 #ifdef __cplusplus
 }
